fix: fix anime poster height on mobile.

--- a/src/components/Anime/styles.less
+++ b/src/components/Anime/styles.less
@@ -51,6 +51,7 @@
   max-width: 220px;
   width: 100%;
   flex: 1;
+  height: 100%;
 
   overflow: hidden;
   border-radius: 16px;
